--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,4 +5,11 @@
     doloremque distinctio. Eius molestiae facilis laudantium, facere nemo vitae
     quo.
   </p>
+  <img
+    src="../img/vite-logo.png"
+    alt="Тут шлях з ../"
+    width="300"
+    height="300"
+  />
+  <img src="./img/vite-logo.png" alt="" width="300" height="300" />
 </header>
