--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,7 @@
 /* header */
 @import url('./header.css');
 /* hero */
-@import url('');
+@import url('./hero.css');
 /* prod */
 @import url('');
 /* footer */
