--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,5 @@
 <header class="header">
+  <button class="js-open-modal" data-modal="2">Открыть окно 2</button>
   <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis amet illum
     optio minus, deserunt, ullam commodi delectus velit repudiandae alias
