--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,3 +1,5 @@
 <section class="hero">
-    <img  src="./img/vite-logo.png" alt="">
-    <h1>hero</h1></section>
+  <img src="./img/vite-logo.png" alt="" />
+  <h1>hero</h1>
+  <button class="js-open-modal" data-modal="1">Открыть окно 1</button>
+</section>
